add staffs & staff

--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -20,3 +20,8 @@
 
 // Add your own site style includes here
 @import "site/layout";
+@import "custom/navbar";
+@import "custom/index";
+@import "custom/footer";
+@import "custom/history";
+@import "custom/staff";
