--- a/templates/views/history.hbs
+++ b/templates/views/history.hbs
@@ -1,29 +1,15 @@
 <div class="container">
-	<div class="page-header text-center">
-		<h1>Історія та Керівники кафедри</h1>
+    {{# each history}}
+	<div class="page-header text-center jumbotron">
+		<h2>{{{name}}}</h2>
 	</div>
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <p class="text-justify">
-                Кафедра прикладної лінгвістики створена в Національному університеті «Львівська політехніка» 
-                у червні 1997 року для підготовки фахівців за спеціальністю «Прикладна лінгвістика» в Інституті 
-                гуманітарної освіти. З 1 листопада 2001 року кафедра входить до складу Інституту комп'ютерних наук 
-                та інформаційних технологій. Засновником кафедри є доктор філологічних наук, доцент Андрейчук Надія Іванівна. 
-                З 2005 року на кафедрі діє аспірантура за спеціальністю 10.02.21 «Структурна, прикладна і математична лінгвістика»</p>
-                <br>
-                <ul>
-                    <li>
-                        <p><span>Андрейчук Надія Іванівна </span>(1997–2008 р.р.) – кандидат філологічних наук, доцент;</p>
-                    </li>
-                    <li>
-                        <p><span>Карамишева Ірина Дамирівна </span>(2008–2010 р.р.) – кандидат філологічних наук, доцент;</p>
-                    </li>
-                    <li>
-                        <p><span>Левченко Олена Петрівна </span>(2010 р. – до сьогодні) – доктор філологічних наук, професор.</p>
-                    </li>
-                </ul>
+            <div class="col-md-8 col-md-offset-2 history">
+                <p class="text-justify"{{{content}}}></p>
             </div>
         </div>
     </div>
+    
+    {{/each}}
 </div>
