--- a/templates/views/blog.hbs
+++ b/templates/views/blog.hbs
@@ -14,7 +14,7 @@
 					</p>
 					{{#if image}}<img src="{{{cloudinaryUrl image width=160 height=160 crop='fit' }}}" class="img pull-right">{{/if}}
 					<p>{{{content.brief}}}</p>
-					{{#if content.extended}}<p class="read-more"><a href="{{postUrl slug}}">Read more...</a></p>{{/if}}
+					{{#if content.extended}}<p class="read-more"><a href="{{postUrl slug}}">Читати більше ...</a></p>{{/if}}
 				</div>
 				{{/each}}
 			</div>
@@ -22,7 +22,7 @@
 		<div class="col-sm-4 col-md-3">
 			<h2>Наукові заходи</h2>
 			<div style="margin-top: 70px;" class="list-group">
-				<a href="/blog" class="active list-group-item">All Categories</a>
+				<a href="/blog" class="active list-group-item">Категорії</a>
 				{{# each data.categories }}
 				<a href="{{categoryUrl key}}" class="false list-group-item">{{name}}</a>
 				{{/each}}
