--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -32,60 +32,69 @@
 	</div> <!-- Carousel -->
 	</div>
 </div>
-
-<div class="container-fluid" style="background: #F2F3CD !important">
-	<div class="page-header">
-		<h1 class="text-center">Спеціальності підготовки</h1>
+<section id="second">
+	<div class="container-fluid" >
+		<div class="page-header">
+			<h1 class="text-center">Спеціальності підготовки</h1>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-md-4 text-center degree degre1">
+					<a href="#">
+						<span class="glyphicon glyphicon-book" ></span>
+						<br>
+						<h4>Бездєльнік</h4>
+						<p>(3.0606879 - бакалавр)</p>
+					</a>
+				</div>
+				<div class="col-xs-12 col-md-4 text-center degree degre2" >
+					<a href="#">
+						<span class="glyphicon glyphicon-briefcase"></span>
+						<br>
+						<h4>Работнік года</h4>
+						<p>(3.0808321 - магістр</p>
+					</a>
+				</div>
+				<div class="col-xs-12 col-md-4 text-center degree degre3" >
+					<a href="#">
+						<span class="glyphicon glyphicon-education"  ></span>	
+						<br>
+						<h4>Праффесар</h4>
+						<p>(5.9797333 - хтосьтам)</p>
+					</a>
+				</div>
+			</div>
+		</div>
+		<br>
+		<br>
 	</div>
-	<div class="container">
+</section>
+
+
+<section id="third">
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 col-md-4 text-center" style="background: #2E8682;  height: 300px; color: white;">
-				<span class="glyphicon glyphicon-book" style="font-size: 3em;"></span>
-				<br>
-				<h4>Бездєльнік</h4>
-				<p>(3.0606879 - бакалавр)</p>
+			<div class="col-md-6 col-md-offset-3 text-center">
+					<h2>Контактна інформація</h2>	
 			</div>
-			<div class="col-xs-12 col-md-4 text-center" style="background: #65BD91; height: 300px; color: white;">
-				<span class="glyphicon glyphicon-briefcase" style="font-size: 3em;"></span>
-				<br>
-				<h4>Работнік года</h4>
-				<p>(3.0808321 - магістр</p>
+		</div>
+		<div class="row">
+			<div class="col-md-4 col-xs-6 text-center">
+				<span></span><p>вул. Митрополита Андрея 5</p><br>
+				<span></span><p>IV навчальний корпус, 131 ауд.</p>
 			</div>
-			<div class="col-xs-12 col-md-4 text-center" style="background: #AEDB8A;  height: 300px; color: white;">
-				<span class="glyphicon glyphicon-education" style="font-size: 3em; "></span>	
-				<br>
-				<h4>Праффесар</h4>
-				<p>(5.9797333 - хтосьтам)</p>
+			<div class="col-md-4 col-xs-6 text-center">
+				<span></span><p>+38 032 258 21 38</p><br>
+				<span></span><p>+38 032 258 23 28 </p>
+			</div>
+			<div class="col-md-4 col-xs-6 text-center">
+				<span></span><p><a href="mailto:#">apling.ikni@gmail.com</a></p><br>
+				<span></span><p>facebook</p>
 			</div>
 		</div>
 	</div>
-	<br>
-	<br>
-</div>
+</section>
 
-
-<div class="container-fluid" style="background: #F9CB8F !important">
-	<div class="row">
-		<div class="col-md-6 col-md-offset-3 text-center">
-				<h3>Контактна інформація</h3>	
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-4 col-xs-6 text-center">
-			<span></span><h4>вул. Митрополита Андрея 5</h4><br>
-			<span></span><h4>IV навчальний корпус, 131 ауд.</h4>
-		</div>
-		<div class="col-md-4 col-xs-6 text-center">
-			<span></span><h4>(+38032) 258-21-38</h4><br>
-			<span></span><h4>(+38032) 258-23-28 </h4>
-		</div>
-		<div class="col-md-4 col-xs-6 text-center">
-			<span></span><h4><a href="mailto:#">apling.ikni@gmail.com</a></h4><br>
-			<span></span><h4>facebook</h4>
-		</div>
-	</div>
-	<br>
-</div>
 <div class="container-fluid">
 	<div class="row">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5146.758575176169!2d24.012221015382472!3d49.83533043937611!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add7a31f0dccd%3A0x9869cc7025bc8e3f!2z0J3QsNGG0ZbQvtC90LDQu9GM0L3QuNC5INGD0L3RltCy0LXRgNGB0LjRgtC10YIgItCb0YzQstGW0LLRgdGM0LrQsCDQv9C-0LvRltGC0LXRhdC90ZbQutCwIg!5e0!3m2!1suk!2sua!4v1494415339595" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
