--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -40,28 +40,102 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-md-4 text-center degree degre1">
-					<a href="#">
+					<a href="#" type="button" data-toggle="modal" data-target="#myModalB">
 						<span class="glyphicon glyphicon-book" ></span>
 						<br>
-						<h4>Бездєльнік</h4>
-						<p>(3.0606879 - бакалавр)</p>
+						<h4>Бакалавр з філології</h4>
+						<p>035.020303 "філологія" <br>
+						прикладна лінгвістика</p>
 					</a>
+					
+					<!-- Modal -->
+					<div class="modal fade" id="myModalB" tabindex="-1" role="dialog" aria-labelledby="myModalB">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title" id="myModalB">Спеціальность підготовки</h4>
+							</div>
+							<div class="modal-body">
+								<h1>БАКАЛАВР З ФІЛОЛОГІЇ<br>(ПРИКЛАДНОЇ ЛІНГВІСТИКИ)</h1>
+								<p>ТРИВАЛІСТЬ НАВЧАННЯ: 4 роки</p>
+								<p>МЕТА ОСВІТНЬО-ПРОФЕСІЙНОЇ ПРОГРАМИ: <br>
+								забезпечення студентами здобуття теоретичних знань та практичних умінь 
+								і навичок із лінгвістики та комп'ютерних наук, зокрема таких, 
+								які необхідні для опису і можелювання лінгвістичних ресурсів природгої мови, 
+								здійснення різних видів перекладу; створення лексикографічних баз даних та словників, корпусів текстів; 
+								програмних засобів для опрацювання лінгвальної інформації.</p>	
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default" data-dismiss="modal">закрити</button>
+							</div>
+							</div>
+						</div>
+					</div>
+
 				</div>
 				<div class="col-xs-12 col-md-4 text-center degree degre2" >
-					<a href="#">
+					<a href="#" type="button" data-toggle="modal" data-target="#myModalM">
 						<span class="glyphicon glyphicon-briefcase"></span>
 						<br>
-						<h4>Работнік года</h4>
-						<p>(3.0808321 - магістр</p>
+						<h4>Магістр з прикладної лінгвістики</h4>
+						<p>035.02030303 "філологія" <br>
+						прикладна лінгвістика</p>
 					</a>
+
+					<!-- Modal -->
+					<div class="modal fade" id="myModalM" tabindex="-1" role="dialog" aria-labelledby="myModalM">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title" id="myModalM">Modal title</h4>
+							</div>
+							<div class="modal-body">
+								<h1>МАГІСТР З ПРИКЛАДНОЇ ЛІНГВІСТИКИ</h1>
+								<p>ТРИВАЛІСТЬ НАВЧАННЯ: 1,5 роки</p>
+								<p>МЕТА ОСВІТНЬО-ПРОФЕСІЙНОЇ ПРОГРАМИ: <br>
+								забезпечитити підготовку високваліфікованих фіхівців у галузі прикладної лігшвістики для 
+								успішного виконання професійних завдань в умовах сучасного ринку праці, зокрема
+								створення алгоритмів для кодування, розпізнавання, інтерпретації, генерування/породження, опрацювання 
+								мови і мовлення, переклад, забезпечення міжкультурної комунікації, формування і створення 
+								лінгвістичного забезпечення різних систем опрацювання природномовної інформації та розроблення систем 
+								автоматизації інформаційних робіт.</p>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+							</div>
+							</div>
+						</div>
+					</div>
+
 				</div>
 				<div class="col-xs-12 col-md-4 text-center degree degre3" >
-					<a href="#">
+					<a href="" type="button" data-toggle="modal" data-target="#myModal">
 						<span class="glyphicon glyphicon-education"  ></span>	
 						<br>
-						<h4>Праффесар</h4>
-						<p>(5.9797333 - хтосьтам)</p>
+						<h4>Магістр-дослідник</h4>
+						<p></p>
 					</a>
+									
+					<!-- Modal -->
+					<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+							</div>
+							<div class="modal-body">
+								...
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+							</div>
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
