--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -100,7 +100,7 @@
 					<img src="/images/stack.png" height="30">
 					<img src="/images/boot.png" height="30" alt="">
 					<img src="/images/logo.svg" width="110">
-					<img src="/images/google.gif"  alt="">
+					{{!--<img src="/images/google.gif"  alt="">--}}
 				</div>
 			</div>
 		</div>
